[package]
name = "vrp"
version = "0.1.0"
authors = ["Donovan <awesomealpineibex@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix = "*"
env_logger = "0.7.1"
strum = "0.17.1"
strum_macros = "0.17.1"
serde = {version = "1.0.89", features = ["derive"]}
serde_json = "1.0.44"
serde_derive = "1.0.104"
bytes = "*"
futures = "0.3.1"
async-trait = "0.1.22"

[build-dependencies]
bindgen = "0.52.0"

